--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "reveal.js",
-  "version": "2.6.1",
-  "description": "The HTML Presentation Framework",
-  "homepage": "http://lab.hakim.se/reveal-js",
-  "subdomain": "revealjs",
-  "scripts": {
-    "test": "grunt test",
-    "start": ""
-  },
+  "name": "ok-lab-chemnitz",
+  "description": "OK Lab Chemnitz",
+  "version": "0.1.0",
+  "homepage": "https://github.com/CodeForChemnitz/presentation",
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "name": "Ronny Hartenstein",
+    "email": "ronny@rh-flow.de"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git://github.com/CodeForChemnitz/presentation.git"
   },
+  "bugs": {
+    "url": "https://github.com/CodeForChemnitz/presentation/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/CodeForChemnitz/presentation/blob/master/LICENSE"
+    }
+  ],
   "engines": {
     "node": "~0.8.0"
   },
@@ -27,13 +30,13 @@
     "socket.io": "~0.9.13"
   },
   "devDependencies": {
-    "grunt-contrib-qunit": "~0.2.2",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-cssmin": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-connect": "~0.4.1",
+    "grunt-contrib-jade": "~0.14.0",
     "grunt-zip": "~0.7.0",
     "grunt": "~0.4.0"
   },
